20-media/prowlarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  namespace: media
  labels:
    app: prowlarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      containers:
        - name: prowlarr
          image: lscr.io/linuxserver/prowlarr:latest
          ports:
            - name: http
              containerPort: 9696
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /media
            - name: downloads
              mountPath: /downloads
      volumes:
        - name: config
          hostPath:
            path: /tank/app/arr/prowlarr
            type: DirectoryOrCreate
        - name: media
          hostPath:
            path: /tank/media
            type: DirectoryOrCreate
        - name: downloads
          hostPath:
            path: /tank/media/downloads
            type: DirectoryOrCreate
