20-media/prowlarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: media-authelia@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - prowlarr.neleoz.com
      secretName: prowlarr-tls
  rules:
    - host: prowlarr.neleoz.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prowlarr
                port:
                  number: 80
